kubernetes_file/stateful/kafka/stateful-set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: stateful
  name: kafka
spec:
  serviceName: "kafka"
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: zookeeper
          image: bitnami/zookeeper:latest
          ports: 
            - containerPort: 2181
        - name: kafka
          image: bitnami/kafka:latest
          ports: 
            - containerPort: 9092
          volumeMounts:
            - name: kafka
              mountPath: /bitnami/kafka
  volumeClaimTemplates:
    - metadata:
        name: kafka
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "standard"
        resources:
          requests:
            storage: 1Gi
