kubernetes_file/stateful/kafka/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: stateful
  name: kafka
spec:
  selector:
    app: kafka
  ports:
  - protocol: TCP
    port: 9092
    targetPort: 9092
