kubernetes_file/stateful/kafka/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kafka-gateway
  namespace: stateful
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 9092
        name: tcp-kafka
        protocol: tcp
      hosts:
        - "*"
