kubernetes_file/stateful/kafka/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-virtual-service
  namespace: stateful
spec:
  hosts:
    - "*"
  gateways:
    - kafka-gateway
  tcp:
    - match:
        - port: 9092
      route:
        - destination:
            host: kafka
            port:
              number: 9092
